--- a/clusters/homelab/bootstrap/root-app.yaml
+++ b/clusters/homelab/bootstrap/root-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: https://github.com/you/gitops
+    repoURL: https://github.com/MatsBerggren/gitops
     targetRevision: main
     path: clusters/homelab
     directory:
