Update storageClassName to local-path for PersistentVolumeClaims in home automation apps

--- a/apps/home-automation/home-assistant/base/pvc.yaml
+++ b/apps/home-automation/home-assistant/base/pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: home-assistant
 spec:
   accessModes: ["ReadWriteOnce"]
-  storageClassName: shared-nfs
+  storageClassName: local-path
   resources:
     requests:
       storage: 10Gi
