--- a/apps/home-automation/home-assistant/overlays/homelab/patch-pvc.yaml
+++ b/apps/home-automation/home-assistant/overlays/homelab/patch-pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: home-assistant
 spec:
-  storageClassName: shared-nfs
+  storageClassName: local-path
   resources:
     requests:
       storage: 20Gi
