--- a/apps/home-automation/mosquitto/base/pvc.yaml
+++ b/apps/home-automation/mosquitto/base/pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: mosquitto
 spec:
   accessModes: ["ReadWriteOnce"]
-  storageClassName: shared-nfs
+  storageClassName: local-path
   resources:
     requests:
       storage: 2Gi
