--- a/apps/home-automation/mosquitto/overlays/homelab/patch-pvc.yaml
+++ b/apps/home-automation/mosquitto/overlays/homelab/patch-pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: mosquitto
 spec:
-  storageClassName: shared-nfs
+  storageClassName: local-path
   resources:
     requests:
       storage: 5Gi
