--- a/apps/home-automation/zigbee2mqtt/base/pvc.yaml
+++ b/apps/home-automation/zigbee2mqtt/base/pvc.yaml
@@ -4,7 +4,7 @@ metadata:
   name: zigbee2mqtt
 spec:
   accessModes: ["ReadWriteOnce"]
-  storageClassName: shared-nfs
+  storageClassName: local-path
   resources:
     requests:
       storage: 5Gi
