--- a/clusters/homelab/bootstrap/argocd/kustomization.yaml
+++ b/clusters/homelab/bootstrap/argocd/kustomization.yaml
@@ -1,3 +1,5 @@
+namespace: argocd
+
 resources:
   - namespace.yaml
   - https://raw.githubusercontent.com/argoproj/argo-cd/v2.11.6/manifests/install.yaml
