--- a/clusters/homelab/bootstrap/argocd/ingress.yaml
+++ b/clusters/homelab/bootstrap/argocd/ingress.yaml
@@ -5,11 +5,20 @@ metadata:
   namespace: argocd
   annotations:
     kubernetes.io/ingress.class: "nginx"
-    cert-manager.io/cluster-issuer: "letsencrypt-dns"
+
+    # Backend kör utan egen TLS (server.insecure: "true")
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+
+    # Säkerställ att all trafik blir HTTPS
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+
+    # Låt cert-manager hämta cert från din ClusterIssuer
+    cert-manager.io/cluster-issuer: "letsencrypt-dns"
 spec:
   tls:
-    - hosts: ["argo.support4u.se"]
+    - hosts:
+        - argo.support4u.se
       secretName: argocd-server-tls
   rules:
     - host: argo.support4u.se
