Refactor Kustomization files to remove apiVersion and kind fields; add ingress-nginx ConfigMap for SSL handling

--- a/clusters/homelab/bootstrap/argocd-simple/tls/ingress.yaml
+++ b/clusters/homelab/bootstrap/argocd-simple/tls/ingress.yaml
@@ -4,10 +4,13 @@ metadata:
   name: argocd-server
   namespace: argocd
   annotations:
-    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    # Förhindra loop även om controllern skulle ha global redirect på
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
     cert-manager.io/cluster-issuer: "letsencrypt-dns"
 spec:
+  ingressClassName: nginx
   tls:
     - hosts: ["argo.support4u.se"]
       secretName: argocd-server-tls
