--- a/clusters/homelab/bootstrap/argocd-simple/kustomization.yaml
+++ b/clusters/homelab/bootstrap/argocd-simple/kustomization.yaml
@@ -1,9 +1,13 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 namespace: argocd
+
 resources:
   - namespace.yaml
+  - https://raw.githubusercontent.com/argoproj/argo-cd/v2.10.11/manifests/install.yaml
   - ingress.yaml
   - certificate.yaml
-  - https://raw.githubusercontent.com/argoproj/argo-cd/v2.10.11/manifests/install.yaml
+  - proxy-headers.yaml
 
 patches:
   - target:
@@ -12,14 +16,12 @@ patches:
       name: argocd-cmd-params-cm
       namespace: argocd
     path: patch-argocd-cmd-params-cm.yaml
-
   - target:
       version: v1
       kind: ConfigMap
       name: argocd-cm
       namespace: argocd
     path: patch-argocd-cm.yaml
-
   - target:
       version: v1
       kind: Service
