--- a/clusters/homelab/apps/platform/rancher/certificate.yaml
+++ b/clusters/homelab/apps/platform/rancher/certificate.yaml
@@ -1,10 +1,11 @@
+# gitops/clusters/homelab/apps/platform/rancher/certificate.yaml
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: rancher-tls
+  name: rancher-cert
   namespace: cattle-system
 spec:
-  secretName: rancher-tls
+  secretName: tls-rancher-ingress
   issuerRef:
     kind: ClusterIssuer
     name: letsencrypt-dns
