--- a/clusters/homelab/apps/platform/rancher/kustomization.yaml
+++ b/clusters/homelab/apps/platform/rancher/kustomization.yaml
@@ -1,3 +1,4 @@
+# gitops/clusters/homelab/apps/platform/rancher/kustomization.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
