--- a/clusters/homelab/apps/platform/rancher/patch-ingress.yaml
+++ b/clusters/homelab/apps/platform/rancher/patch-ingress.yaml
@@ -1,3 +1,4 @@
+# gitops/clusters/homelab/apps/platform/rancher/patch-ingress.yaml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -10,6 +11,6 @@ spec:
   ingressClassName: nginx
   tls:
     - hosts: ["rancher.support4u.se"]
-      secretName: rancher-tls
+      secretName: tls-rancher-ingress
   rules:
     - host: rancher.support4u.se
