--- a/apps/home-automation/home-assistant/base/ingress.yaml
+++ b/apps/home-automation/home-assistant/base/ingress.yaml
@@ -1,14 +1,16 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: home-assistant
+  name: homeassistant
+  namespace: homeassistant
   annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-dns"
+    cert-manager.io/cluster-issuer: letsencrypt-dns
+    nginx.ingress.kubernetes.io/proxy-body-size: 1g
 spec:
   ingressClassName: nginx
   tls:
     - hosts: ["homeassistant.support4u.se"]
-      secretName: home-assistant-tls
+      secretName: tls-homeassistant
   rules:
     - host: homeassistant.support4u.se
       http:
@@ -17,6 +19,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: home-assistant
+                name: homeassistant
                 port:
-                  number: 80
+                  number: 8123
