--- a/apps/home-automation/home-assistant/base/pvc.yaml
+++ b/apps/home-automation/home-assistant/base/pvc.yaml
@@ -1,10 +1,29 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: home-assistant
+  name: homeassistant-claim0
+  namespace: homeassistant
+  labels:
+    io.kompose.service: homeassistant-claim0
 spec:
-  accessModes: ["ReadWriteOnce"]
+  accessModes:
+    - ReadWriteOnce
   storageClassName: local-path
   resources:
     requests:
-      storage: 10Gi
+      storage: 100Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: homeassistant-claim1
+  namespace: homeassistant
+  labels:
+    io.kompose.service: homeassistant-claim1
+spec:
+  accessModes:
+    - ReadWriteOnce
+  storageClassName: local-path
+  resources:
+    requests:
+      storage: 100Mi
