--- a/apps/home-automation/home-assistant/base/service.yaml
+++ b/apps/home-automation/home-assistant/base/service.yaml
@@ -1,13 +1,29 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: home-assistant
+  name: homeassistant
+  namespace: homeassistant
+  labels:
+    io.kompose.service: homeassistant
 spec:
-  type: ClusterIP
+  type: LoadBalancer
+  loadBalancerIP: 10.10.10.218
   selector:
-    app: home-assistant
+    io.kompose.service: homeassistant
   ports:
-    - port: 80
+    - name: http
+      port: 8123
       targetPort: 8123
       protocol: TCP
-      name: http
+    - name: coiot
+      port: 5683
+      targetPort: 5683
+      protocol: UDP
+    - name: tcp-21063
+      port: 21063
+      targetPort: 21063
+      protocol: TCP
+    - name: tcp-1400
+      port: 1400
+      targetPort: 1400
+      protocol: TCP
