--- a/clusters/homelab/apps/home-automation/appset.yaml
+++ b/clusters/homelab/apps/home-automation/appset.yaml
@@ -1,3 +1,4 @@
+
 apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
@@ -14,7 +15,7 @@ spec:
     metadata:
       name: '{{path.basename}}'
     spec:
-      project: home-automation
+      project: default
       source:
         repoURL: https://github.com/MatsBerggren/gitops
         targetRevision: main
