--- a/apps/home-automation/mosquitto/base/pvc.yaml
+++ b/apps/home-automation/mosquitto/base/pvc.yaml
@@ -1,10 +1,13 @@
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mosquitto
+  name: mosquitto-data
+  labels:
+    app: mosquitto
 spec:
-  accessModes: ["ReadWriteOnce"]
+  accessModes: [ ReadWriteOnce ]
   storageClassName: local-path
   resources:
     requests:
-      storage: 2Gi
+      storage: 512Mi
