--- a/apps/home-automation/mosquitto/base/service.yaml
+++ b/apps/home-automation/mosquitto/base/service.yaml
@@ -1,12 +1,16 @@
+
 apiVersion: v1
 kind: Service
 metadata:
   name: mosquitto
+  labels:
+    app: mosquitto
 spec:
   type: ClusterIP
   selector:
     app: mosquitto
   ports:
-    - port: 1883
+    - name: mqtt
+      port: 1883
       targetPort: 1883
-      name: mqtt
+      protocol: TCP
