--- a/apps/home-automation/mosquitto/overlays/homelab/kustomization.yaml
+++ b/apps/home-automation/mosquitto/overlays/homelab/kustomization.yaml
@@ -1,10 +1,6 @@
+
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: mosquitto
 resources:
   - ../../base
-patches:
-  - target:
-      version: v1
-      kind: PersistentVolumeClaim
-      name: mosquitto
-    path: patch-pvc.yaml
