--- a/apps/home-automation/zigbee2mqtt/base/deployment.yaml
+++ b/apps/home-automation/zigbee2mqtt/base/deployment.yaml
@@ -1,33 +1,51 @@
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: zigbee2mqtt
+  labels:
+    app: zigbee2mqtt
 spec:
   replicas: 1
   selector:
-    matchLabels: { app: zigbee2mqtt }
+    matchLabels:
+      app: zigbee2mqtt
   template:
     metadata:
-      labels: { app: zigbee2mqtt }
+      labels:
+        app: zigbee2mqtt
     spec:
       containers:
         - name: zigbee2mqtt
-          image: koenkk/zigbee2mqtt:latest
+          image: ghcr.io/koenkk/zigbee2mqtt:latest
+          imagePullPolicy: Always
+          securityContext:
+            privileged: true
           env:
             - name: TZ
-              value: "Europe/Stockholm"
+              value: Europe/Stockholm
+            - name: ZIGBEE2MQTT_CONFIG_SERIAL_PORT
+              value: /dev/ttyUSB-zigbee
+            - name: ZIGBEE2MQTT_CONFIG_MQTT_SERVER
+              value: mqtt://mosquitto.mosquitto.svc.cluster.local:1883
+            - name: ZIGBEE2MQTT_CONFIG_MQTT_BASE_TOPIC
+              value: zigbee2mqtt
+            - name: ZIGBEE2MQTT_CONFIG_FRONTEND_ENABLED
+              value: "true"
           ports:
-            - containerPort: 8080
+            - name: ui
+              containerPort: 8080
+              protocol: TCP
           volumeMounts:
-            - name: data
+            - name: zigbee2mqtt-data
               mountPath: /app/data
-            - name: z2m-config
-              mountPath: /app/data/configuration.yaml
-              subPath: configuration.yaml
+            - name: zigbee-usb
+              mountPath: /dev/ttyUSB-zigbee
       volumes:
-        - name: data
+        - name: zigbee2mqtt-data
           persistentVolumeClaim:
-            claimName: zigbee2mqtt
-        - name: z2m-config
-          configMap:
-            name: z2m-config
+            claimName: zigbee2mqtt-data
+        - name: zigbee-usb
+          hostPath:
+            path: /dev/ttyUSB-zigbee   # byt till din faktiska dongel (t.ex. /dev/ttyUSB0 eller /dev/serial/by-id/...)
+            type: CharDevice
