--- a/apps/home-automation/zigbee2mqtt/base/kustomization.yaml
+++ b/apps/home-automation/zigbee2mqtt/base/kustomization.yaml
@@ -1,8 +1,11 @@
+
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - deployment.yaml
   - service.yaml
-  - ingress.yaml
   - pvc.yaml
-  - configmap.yaml
+labels:
+  - pairs:
+      app: zigbee2mqtt
+    includeSelectors: true
