--- a/apps/home-automation/zigbee2mqtt/base/pvc.yaml
+++ b/apps/home-automation/zigbee2mqtt/base/pvc.yaml
@@ -1,10 +1,13 @@
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: zigbee2mqtt
+  name: zigbee2mqtt-data
+  labels:
+    app: zigbee2mqtt
 spec:
-  accessModes: ["ReadWriteOnce"]
+  accessModes: [ ReadWriteOnce ]
   storageClassName: local-path
   resources:
     requests:
-      storage: 5Gi
+      storage: 512Mi
