--- a/apps/home-automation/zigbee2mqtt/base/service.yaml
+++ b/apps/home-automation/zigbee2mqtt/base/service.yaml
@@ -1,12 +1,16 @@
+
 apiVersion: v1
 kind: Service
 metadata:
   name: zigbee2mqtt
+  labels:
+    app: zigbee2mqtt
 spec:
   type: ClusterIP
   selector:
     app: zigbee2mqtt
   ports:
-    - port: 80
+    - name: ui
+      port: 8080
       targetPort: 8080
-      name: http
+      protocol: TCP
