--- a/apps/home-automation/zigbee2mqtt/overlays/homelab/kustomization.yaml
+++ b/apps/home-automation/zigbee2mqtt/overlays/homelab/kustomization.yaml
@@ -1,15 +1,7 @@
+
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: zigbee2mqtt
 resources:
   - ../../base
-patches:
-  - target:
-      version: v1
-      kind: PersistentVolumeClaim
-      name: zigbee2mqtt
-    path: patch-pvc.yaml
-  - target:
-      version: networking.k8s.io/v1
-      kind: Ingress
-      name: zigbee2mqtt
-    path: patch-ingress.yaml
+# Lägg gärna till en ingress här om du vill nå UI:t externt.
