Refactor homeassistant deployment: move nodeSelector under spec for correct hierarchy

--- a/apps/home-automation/homeassistant/base/deployment.yaml
+++ b/apps/home-automation/homeassistant/base/deployment.yaml
@@ -18,8 +18,9 @@ spec:
       labels:
         app: homeassistant
         io.kompose.service: homeassistant
-    nodeSelector:
-      homelab/homeassistant: "true"
+    spec:
+      nodeSelector:
+        homelab/homeassistant: "true"
       containers:
         - name: homeassistant
           image: homeassistant/home-assistant:latest
