--- a/clusters/homelab/platform/argocd/overlays/homelab/argocd-cmd-params-cm.yaml
+++ b/clusters/homelab/platform/argocd/overlays/homelab/argocd-cmd-params-cm.yaml
@@ -1,7 +1,8 @@
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: argocd-cm
+  name: argocd-cmd-params-cm
   namespace: argocd
 data:
-  url: https://arg.support4u.se
+  server.insecure: "true"
