--- a/clusters/homelab/platform/argocd/overlays/homelab/ingress.yaml
+++ b/clusters/homelab/platform/argocd/overlays/homelab/ingress.yaml
@@ -1,19 +1,17 @@
+
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: argocd-server
   namespace: argocd
   annotations:
-    cert-manager.io/cluster-issuer: letsencrypt-dns
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/proxy-set-headers: "argocd/argocd-proxy-headers"
+    cert-manager.io/cluster-issuer: letsencrypt-dns
 spec:
   ingressClassName: nginx
-  tls:
-    - hosts: ["arg.support4u.se"]
-      secretName: argocd-server-tls
   rules:
     - host: arg.support4u.se
       http:
@@ -25,3 +23,7 @@ spec:
                 name: argocd-server
                 port:
                   number: 80
+  tls:
+    - hosts:
+        - arg.support4u.se
+      secretName: argocd-server-tls
