--- a/clusters/homelab/projects/project-home-automation.yaml
+++ b/clusters/homelab/projects/project-home-automation.yaml
@@ -1,18 +1,20 @@
+
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: home-automation
   namespace: argocd
 spec:
-  description: Home automation stack
-  sourceRepos:
-    - https://github.com/you/gitops
+  description: Home automation apps
   destinations:
-    - namespace: '*'
+    - namespace: "*"
       server: https://kubernetes.default.svc
+  sourceRepos:
+    - https://github.com/MatsBerggren/gitops
   clusterResourceWhitelist:
     - group: '*'
       kind: '*'
   namespaceResourceWhitelist:
     - group: '*'
       kind: '*'
+  roles: []
