--- a/clusters/homelab/root/kustomization.yaml
+++ b/clusters/homelab/root/kustomization.yaml
@@ -2,5 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../projects/project-home-automation.yaml
-  - ../applicationsets/home-automation.yaml
+  - projects/project-home-automation.yaml
+  - applicationsets/home-automation.yaml
