Update PersistentVolumeClaim name to influxdb-data for InfluxDB setup

--- a/apps/home-automation/influx/base/pvc.yaml
+++ b/apps/home-automation/influx/base/pvc.yaml
@@ -2,9 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: homeassistant-claim1
-  labels:
-    app: homeassistant
+  name: influxdb-data
 spec:
   accessModes: [ ReadWriteOnce ]
   storageClassName: local-path
