--- a/apps/home-automation/homeassistant/base/deployment.yaml
+++ b/apps/home-automation/homeassistant/base/deployment.yaml
@@ -19,6 +19,13 @@ spec:
         app: homeassistant
         io.kompose.service: homeassistant
     spec:
+      dnsPolicy: None
+      dnsConfig:
+        nameservers: ["10.43.0.10"]
+        options:
+          - name: ndots
+            value: "2"
+          - name: single-request-reopen
       nodeSelector:
         homelab/homeassistant: "true"
       containers:
