--- a/apps/home-automation/mosquitto/overlays/homelab/kustomization.yaml
+++ b/apps/home-automation/mosquitto/overlays/homelab/kustomization.yaml
@@ -1,6 +1,6 @@
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: mosquitto
+namespace: home-automation
 resources:
   - ../../base
