--- a/apps/home-automation/homeassistant/base/service.yaml
+++ b/apps/home-automation/homeassistant/base/service.yaml
@@ -1,3 +1,33 @@
+# services.yaml
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mqtt
+  namespace: home-automation
+spec:
+  type: ClusterIP
+  selector:
+    app: mosquitto              # <-- matcha labels från din broker-pod
+  ports:
+    - name: mqtt
+      port: 1883
+      targetPort: 1883
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: influxdb
+  namespace: home-automation
+spec:
+  type: ClusterIP
+  selector:
+    app: influxdb               # <-- matcha labels från din influx-pod
+  ports:
+    - name: http
+      port: 8086
+      targetPort: 8086
+---
 apiVersion: v1
 kind: Service
 metadata:
