--- a/apps/home-automation/homeassistant/base/deployment.yaml
+++ b/apps/home-automation/homeassistant/base/deployment.yaml
@@ -20,6 +20,12 @@ spec:
         io.kompose.service: homeassistant
     spec:
       dnsPolicy: ClusterFirst
+      dnsConfig:
+        nameservers: ["10.43.0.10"]
+        options:
+          - name: ndots
+            value: "2"
+          - name: single-request-reopen
       nodeSelector:
         homelab/homeassistant: "true"
       containers:
