Add sync options for ArgoCD application to manage namespace and pruning behavior

--- a/clusters/homelab/bootstrap/root-app.yaml
+++ b/clusters/homelab/bootstrap/root-app.yaml
@@ -20,3 +20,6 @@ spec:
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
+      - Replace=true              # <- viktigt för immutable fält (t.ex. namespace)
+      - PruneLast=true            # <- pruna sist, efter nyskapande
+      - PrunePropagationPolicy=foreground
