--- a/apps/home-automation/zigbee2mqtt/overlays/homelab/ingress.yaml
+++ b/apps/home-automation/zigbee2mqtt/overlays/homelab/ingress.yaml
@@ -19,4 +19,4 @@ spec:
               service:
                 name: zigbee2mqtt
                 port:
-                  number: 80
+                  number: 8080   # <- ändrat från 80
