--- a/apps/home-automation/zigbee2mqtt/overlays/homelab/kustomization.yaml
+++ b/apps/home-automation/zigbee2mqtt/overlays/homelab/kustomization.yaml
@@ -1,7 +1,10 @@
 
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+
 namespace: home-automation
+
 resources:
   - ../../base
-# Lägg gärna till en ingress här om du vill nå UI:t externt.
+  - ingress.yaml
+  - certificate.yaml
