--- a/apps/home-automation/zigbee2mqtt/base/deployment.yaml
+++ b/apps/home-automation/zigbee2mqtt/base/deployment.yaml
@@ -27,7 +27,7 @@ spec:
             - name: ZIGBEE2MQTT_CONFIG_SERIAL_PORT
               value: tcp://10.10.60.100:6638
             - name: ZIGBEE2MQTT_CONFIG_SERIAL_ADAPTER
-              value: ezsp
+              value: ember
             - name: ZIGBEE2MQTT_CONFIG_MQTT_SERVER
               value: mqtt://mosquitto.mosquitto.svc.cluster.local:1883
             - name: ZIGBEE2MQTT_CONFIG_MQTT_BASE_TOPIC
