--- a/apps/home-automation/zigbee2mqtt/base/deployment.yaml
+++ b/apps/home-automation/zigbee2mqtt/base/deployment.yaml
@@ -29,7 +29,7 @@ spec:
             - name: ZIGBEE2MQTT_CONFIG_SERIAL_ADAPTER
               value: ember
             - name: ZIGBEE2MQTT_CONFIG_MQTT_SERVER
-              value: mqtt://mosquitto.mosquitto.svc.cluster.local:1883
+              value: mqtt://mosquitto:1883
             - name: ZIGBEE2MQTT_CONFIG_MQTT_BASE_TOPIC
               value: zigbee2mqtt
             - name: ZIGBEE2MQTT_CONFIG_FRONTEND_ENABLED
