--- a/apps/home-automation/homeassistant/base/deployment.yaml
+++ b/apps/home-automation/homeassistant/base/deployment.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -19,6 +18,7 @@ spec:
         app: homeassistant
         io.kompose.service: homeassistant
     spec:
+      # (valfritt men bra för HA/mDNS/SSDP): hostNetwork: true
       dnsPolicy: None
       dnsConfig:
         nameservers: ["10.43.0.10"]
@@ -48,14 +48,17 @@ spec:
             - { name: tcp-21063,  containerPort: 21063, protocol: TCP }
             - { name: tcp-1400,   containerPort: 1400, protocol: TCP }
           volumeMounts:
-            - { name: cp210x,               mountPath: /dev/ttyUSB-cp210x }
+            # Mounta stabila seriella länkar
+            - { name: serial-by-id,         mountPath: /dev/serial/by-id, readOnly: true }
+            # Dina befintliga PVC:er
             - { name: homeassistant-config, mountPath: /config }
             - { name: homeassistant-media,  mountPath: /media/cameras }
       volumes:
-        - name: cp210x
+        # Viktigt: montera katalogen, inte en fil/symlink
+        - name: serial-by-id
           hostPath:
-            path: /dev/ttyUSB-cp210x
-            type: CharDevice
+            path: /dev/serial/by-id
+            type: Directory
         - name: homeassistant-config
           persistentVolumeClaim:
             claimName: homeassistant-claim0
