--- a/clusters/homelab/bootstrap/root-app.yaml
+++ b/clusters/homelab/bootstrap/root-app.yaml
@@ -15,8 +15,8 @@ spec:
     namespace: argocd
   syncPolicy:
     automated:
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
       - ServerSideApply=true
