--- a/clusters/homelab/root/applicationsets/home-automation.yaml
+++ b/clusters/homelab/root/applicationsets/home-automation.yaml
@@ -27,8 +27,8 @@ spec:
         namespace: '{{path.basename}}'
       syncPolicy:
         automated:
-          prune: true
-          selfHeal: true
+          prune: false
+          selfHeal: false
         syncOptions:
           - CreateNamespace=true
           - ServerSideApply=true
