Update homeassistant PVC and deployment: rename claim and adjust storage class and request

--- a/apps/home-automation/homeassistant/base/deployment.yaml
+++ b/apps/home-automation/homeassistant/base/deployment.yaml
@@ -61,7 +61,7 @@ spec:
             type: CharDevice
         - name: homeassistant-config
           persistentVolumeClaim:
-            claimName: homeassistant-claim0
+            claimName: homeassistant-config
         - name: homeassistant-media
           persistentVolumeClaim:
             claimName: homeassistant-claim1
