--- a/apps/home-automation/homeassistant/base/pvc-config.yaml
+++ b/apps/home-automation/homeassistant/base/pvc-config.yaml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: homeassistant-claim0
+  name: homeassistant-config
   labels:
     app: homeassistant
 spec:
   accessModes: [ ReadWriteOnce ]
-  storageClassName: local-path
+  storageClassName: longhorn
   resources:
     requests:
-      storage: 100Mi
+      storage: 5Gi
