--- a/apps/system-tools/openbao/base/statefulset.yaml
+++ b/apps/system-tools/openbao/base/statefulset.yaml
@@ -16,7 +16,19 @@ spec:
         app: openbao
     spec:
       securityContext:
+        runAsUser: 1000
+        runAsGroup: 1000
         fsGroup: 1000
+        fsGroupChangePolicy: "OnRootMismatch"
+      initContainers:
+        - name: volume-permissions
+          image: busybox:1.36
+          command: ['sh','-c','chown -R 1000:1000 /data && chmod -R g+rwX /data']
+          securityContext:
+            runAsUser: 0
+          volumeMounts:
+            - name: data
+              mountPath: /data
       containers:
         - name: openbao
           image: ghcr.io/openbao/openbao:latest
