--- a/apps/system-tools/openbao/base/configmap.yaml
+++ b/apps/system-tools/openbao/base/configmap.yaml
@@ -4,7 +4,7 @@ metadata:
   name: openbao-config
   namespace: openbao
 data:
-  config.hcl: |
+  config.tmpl: |
     # Listener for API + cluster traffic
     listener "tcp" {
       address          = "0.0.0.0:8200"
@@ -12,11 +12,13 @@ data:
       tls_disable      = "true"
     }
 
-    # For raft clusters we only need a stable leader address for first join.
-    # Avoid env interpolation by using full pod DNS in the known namespace.
+    # Explicit addresses required for raft
+    api_addr     = "http://__POD_NAME__.openbao.openbao.svc:8200"
+    cluster_addr = "http://__POD_IP__:8201"
+
     storage "raft" {
       path    = "/data"
-      node_id = "{{env \"HOSTNAME\"}}"
+      node_id = "__POD_NAME__"
       retry_join {
         leader_api_addr = "http://openbao-0.openbao.openbao.svc:8200"
       }
