--- a/apps/system-tools/openbao/base/statefulset.yaml
+++ b/apps/system-tools/openbao/base/statefulset.yaml
@@ -28,6 +28,35 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /data
+        - name: render-config
+          image: busybox:1.36
+          command:
+            - sh
+            - -c
+            - |
+              set -eu
+              cp /etc/openbao/config.tmpl /work/config.hcl
+              sed -i "s#__POD_NAME__#${POD_NAME}#g" /work/config.hcl
+              sed -i "s#__POD_IP__#${POD_IP}#g" /work/config.hcl
+              sed -i "s#__NAMESPACE__#${NAMESPACE}#g" /work/config.hcl
+          env:
+            - name: POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+          volumeMounts:
+            - name: config-tmpl
+              mountPath: /etc/openbao
+            - name: config-rendered
+              mountPath: /work
       containers:
         - name: openbao
           image: ghcr.io/openbao/openbao:latest
@@ -50,14 +79,17 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 10
           volumeMounts:
-            - name: config
+            - name: config-rendered
               mountPath: /etc/openbao
+              readOnly: true
             - name: data
               mountPath: /data
       volumes:
-        - name: config
+        - name: config-tmpl
           configMap:
             name: openbao-config
+        - name: config-rendered
+          emptyDir: {}
   volumeClaimTemplates:
     - metadata:
         name: data
