--- a/apps/system-tools/openbao/base/statefulset.yaml
+++ b/apps/system-tools/openbao/base/statefulset.yaml
@@ -3,6 +3,8 @@ kind: StatefulSet
 metadata:
   name: openbao
   namespace: openbao
+  annotations:
+    # argocd.argoproj.io/sync-options: Replace=true
 spec:
   serviceName: openbao
   replicas: 1
@@ -62,7 +64,9 @@ spec:
           configMap:
             name: openbao-config
   volumeClaimTemplates:
-    - metadata:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
         name: data
       spec:
         accessModes: ["ReadWriteOnce"]
