--- a/apps/system-tools/toolbox/base/kustomization.yaml
+++ b/apps/system-tools/toolbox/base/kustomization.yaml
@@ -1,8 +1,12 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: system-tools
+
+namespace: toolbox
+
 resources:
+  - namespace.yaml
   - deployment.yaml
+
 images:
-  - name: ghcr.io/MatsBerggren/toolbox
-    newTag: latest
+  - name: ghcr.io/matsberggren/toolbox
+    newTag: 3a2f46808e5896e3deaa0d93a8877f47af42947f
