--- a/apps/home-automation/esphome/base/deployment.yaml
+++ b/apps/home-automation/esphome/base/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: esphome
     spec:
+      hostNetwork: true
+      dnsPolicy: ClusterFirstWithHostNet
       containers:
         - name: esphome
           image: esphome/esphome:latest
